# HotpotQA-MAS

./: .env.example  .gitignore  Makefile  README.md  REPORT_SFT_V1.md  analyze_hotpotqa_dynamic_failures.py  analyze_hotpotqa_dynamic_mas_results.py  analyze_hotpotqa_main_oracle_answer.py  analyze_hotpotqa_mas_results.py  analyze_hotpotqa_results.py  analyze_hotpotqa_sub_oracle.py  config.py  distributed.py  evaluate_mas.py  generate_correct_sft_data.py  generate_hotpotqa_dynamic_mas_sft_data.py  generate_hotpotqa_dynamic_mixture_sft_data.py  generate_hotpotqa_dynamic_sub_evidence_sft_data.py  generate_hotpotqa_dynamic_synthesis_sft_data.py  generate_hotpotqa_dynamic_verifier_sft_data.py  generate_hotpotqa_mas_sft_data.py  generate_hotpotqa_sft_data.py  grpo_hotpotqa.py  grpo_hotpotqa_mas.py  grpo_hotpotqa_trl.py  grpo_v4.py  hotpotqa_environment.py  inference_eval.py  prepare_hotpotqa_data.py  prepare_hotpotqa_enhanced_data.py  pyproject.toml  requirements.txt  run_hotpotqa_direct_eval_suite.py  run_hotpotqa_dynamic_eval_suite.py  run_hotpotqa_eval_suite.py  sft_trainer.py  train_hotpotqa_sub_preferences.py  utils.py
data/sft/: README.md  hotpotqa_dynamic_verifier_sft_data_500.jsonl
docs/: mas_v2_error_analysis.md
tests/: test_environment.py
